# pure3D

./: .gitignore  .gitmodules  Build.sh  CMakeLists.txt  CMakeSettings.json  Install.sh  README.md  index.md  test.pbin  test.txt
Content/Shaders/: BaseFragmentShader.frag  BaseVertexShader.vert
Content/test/: trucBAZ2.asset  wtf.asset
Content/test/TRUC/: truc2.asset
Content/zbull/: trucBAZ.asset
Documentation/Renderer/: Proxy managment.xmind  Render loop.xmind  RendererProxies.mdj
Documentation/Serialization/: PackageDataOrganisation.txt
Sources/: CMakeLists.txt
Sources/Editor/: CMakeLists.txt
Sources/Editor/Private/: EditorModule.cpp  Main.cpp
Sources/Engine/: CMakeLists.txt
Sources/Engine/AssetManager/: CMakeLists.txt
Sources/Engine/AssetManager/Private/: Asset.cpp  AssetFactory.cpp  AssetManager.cpp  AssetManagerModule.cpp  AssetReference.cpp
Sources/Engine/AssetManager/Private/Assets/: Asset.cpp
Sources/Engine/AssetManager/Public/: Asset.h  AssetFactory.h  AssetManager.h  AssetReference.h
Sources/Engine/AssetManager/Public/Assets/: Asset.h
Sources/Engine/Controls/: CMakeLists.txt
Sources/Engine/Controls/Private/: InputSystem.cpp
Sources/Engine/Controls/Public/: InputSystem.h
Sources/Engine/Core/Private/: ModuleManager.cpp
Sources/Engine/Core/Public/: ModuleManager.h
Sources/Engine/Engine/: CMakeLists.txt
Sources/Engine/Engine/Private/: EngineModule.cpp
Sources/Engine/Engine/Public/: EngineModule.h
Sources/Engine/Graphics/: CMakeLists.txt
Sources/Engine/Graphics/GlfwWindow/: CMakeLists.txt
Sources/Engine/Graphics/GlfwWindow/Private/: GlfwWindow.cpp
Sources/Engine/Graphics/GlfwWindow/Public/: GlfwWindow.h
Sources/Engine/Graphics/Mesh/: CMakeLists.txt
Sources/Engine/Graphics/Mesh/Private/: Mesh.cpp  MeshComponent.cpp  MeshFactory.cpp  MeshModule.cpp  StaticMesh.cpp
Sources/Engine/Graphics/Mesh/Public/: Mesh.h  MeshComponent.h  MeshFactory.h  StaticMesh.h
Sources/Engine/Graphics/OpenGLRenderer/: CMakeLists.txt
Sources/Engine/Graphics/OpenGLRenderer/Private/: GlfwInputs.cpp  OpenGLRenderApi.cpp  OpenGLRenderer.cpp  Proxies.cpp
Sources/Engine/Graphics/OpenGLRenderer/Public/: GlfwInputs.h  Handles.h  OpenGLRenderApi.h  OpenGLRenderer.h  Proxies.h
Sources/Engine/Graphics/Renderer/: CMakeLists.txt
Sources/Engine/Graphics/Renderer/Private/: PrimitiveProxy.cpp  RenderApi.cpp  RenderPass.cpp  Renderer.cpp
Sources/Engine/Graphics/Renderer/Private/Scene/: PrimitiveComponent.cpp  SceneComponent.cpp
Sources/Engine/Graphics/Renderer/Private/UI/: UiSystem.cpp
Sources/Engine/Graphics/Renderer/Public/: Camera.h  PrimitiveProxy.h  RenderApi.h  RenderHelper.h  RenderPass.h  Renderer.h  RendererInterface.h  WindowInterface.h
Sources/Engine/Graphics/Renderer/Public/Scene/: PrimitiveComponent.h  SceneComponent.h
Sources/Engine/Graphics/Shaders/: CMakeLists.txt
Sources/Engine/Graphics/Shaders/Private/: Shader.cpp  ShaderFactory.cpp  ShadersModule.cpp
Sources/Engine/Graphics/Shaders/Public/: Shader.h  ShaderFactory.h
Sources/Engine/Graphics/Textures/: CMakeLists.txt
Sources/Engine/Graphics/Textures/Private/: Texture.cpp  TexturesModule.cpp
Sources/Engine/Graphics/Textures/Public/: Texture.h
Sources/Engine/Graphics/VulkanRenderer/: CMakeLists.txt
Sources/Engine/Main/: CMakeLists.txt
Sources/Engine/Main/Private/: Main.cpp
Sources/Engine/Textures/: CMakeLists.txt
Sources/Engine/Textures/Public/: Texture.h  TextureFactory.h
Sources/PureHeaderTool/: CMakeLists.txt
Sources/PureHeaderTool/PureHeaderGenerator/: CMakeLists.txt
Sources/PureHeaderTool/PureHeaderGenerator/Private/: Main.cpp
Sources/PureHeaderTool/PureHeaderGenerator/Private/Parser/: ClassParser.cpp  SFileData.cpp  SObject.cpp  SStateMachine.cpp  STypes.cpp
Sources/PureHeaderTool/PureHeaderGenerator/Private/Utils/: Utils.cpp
Sources/PureHeaderTool/PureHeaderGenerator/Private/Writer/: ClassWriter.cpp  CodeGenerator.cpp  HeaderWriter.cpp  SourceWriter.cpp
Sources/PureHeaderTool/PureHeaderGenerator/Public/Parser/: ClassIdHandler.h  ClassParser.h  SFileData.h  SObject.h  SStateMachine.h  STypes.h
Sources/PureHeaderTool/PureHeaderGenerator/Public/Utils/: Utils.h
Sources/PureHeaderTool/PureHeaderGenerator/Public/Writer/: ClassWriter.h  CodeGenerator.h  HeaderWriter.h  SourceWriter.h
Sources/PureHeaderTool/PureHeaderLib/: CMakeLists.txt
Sources/PureHeaderTool/PureHeaderLib/Private/: RClass.cpp  RProperty.cpp  RType.cpp  ReflectionUtilities.cpp
Sources/PureHeaderTool/PureHeaderLib/Private/Primitives/: PrimitiveTypes.cpp
Sources/PureHeaderTool/PureHeaderLib/Private/Reflection/: RArrayView.cpp  RClass.cpp  RProperty.cpp  RType.cpp  ReflectionUtilities.cpp  Serialization.cpp
Sources/PureHeaderTool/PureHeaderLib/Private/Serialization/: GenericSerializers.cpp  Serialization.cpp
Sources/PureHeaderTool/PureHeaderLib/Public/: Class.h  RClass.h  RType.h  ReflectionMacros.h  ReflectionUtilities.h  Type.h
Sources/PureHeaderTool/PureHeaderLib/Public/Primitives/: PrimitiveTypes.h
Sources/PureHeaderTool/PureHeaderLib/Public/Reflection/: RArrayView.h  RClass.h  RConstructor.h  RFunction.h  RProperty.h  RType.h  ReflectionMacros.h  ReflectionUtilities.h  Serialization.h
Sources/PureHeaderTool/PureHeaderLib/Public/Serialization/: GenericSerializers.h  Serialization.h
Sources/PureHeaderTool/PureHeaderLib/Tests/: Main.cpp
Sources/PureHeaderTool/PureHeaderLib/Tests/Examples/: BasicObject.cpp  BasicObject.h
Sources/PureHeaderTool/PureHeaderTests/: CMakeLists.txt
Sources/PureHeaderTool/PureHeaderTests/Private/: Main.cpp
Sources/PureHeaderTool/PureHeaderTests/Public/: BasicObject.h
Sources/PureStd/: CMakeLists.txt
Sources/PureStd/Private/IO/: EngineIO.cpp  Log.cpp
Sources/PureStd/Private/Types/: String.cpp
Sources/PureStd/Public/: Hashing.h  UniformMacros.h
Sources/PureStd/Public/Events/: EventManager.h
Sources/PureStd/Public/IO/: EngineIO.h  Log.h
Sources/PureStd/Public/Types/: Array.h  ByteArray.h  Color.h  Matrix.h  Path.h  Rotator.h  String.h  Transform.h  Vector.h
Tools/: Build-Default.sh  CMakeLists.txt  Install.py
(+2 files in other folders)
